spacing fixed

--- a/main.css
+++ b/main.css
@@ -900,6 +900,7 @@ header .content .countdown {
 
 .faq {
     margin-top:5px;
+    margin-bottom:100px;
 }
 
 .faq a {
